--- a/index.html
+++ b/index.html
@@ -4,9 +4,131 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mitchell Crane - Portfolio</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>MHC Portfolio</title>
   </head>
   <body>
-    <h1>Mitchell Crane</h1>
+    <section class="intro">
+<div class="container">
+  <nav>
+    <!-- <img src="./images/#e0e1ddMClogo.png"> -->
+  </nav>
+  <h2 class="heroH2">Hi, I'm Mitchell & I'm a Web Developer</h2>
+</div>
+    </section>
+
+    <section class="aboutMeContainer">
+      <h2 class="heading">About Me</h2>
+      <div class="container">
+        <div class="about-content">
+          <div class="about-text-container">
+            <img src="./images/headshot.jpg" />
+            <p>
+              I am a Web Developer seeking a full-time web development position.
+              I graduated with a bachelors degree in digital marketing from Utah
+              Valley University. Shortly after, I enrolled in Devmountain's Web
+              Development Bootcamp.
+            </p>
+            <br />
+            <p>
+              I was first introduced to coding by a couple of classes that were
+              required for my digital marketing degree. I was intrigued with how
+              one could create and build through code. I have always been a
+              hands-on type of person. I love tinkering on vehicles and tuning
+              up my bikes and dirtbikes. You could classify my as a DIY type of
+              person. Coding naturally became another outlet for me to build and
+              tinker.
+            </p>
+            <br />
+            <p>
+              Not long after graduating and completeing a few marketing
+              internships, I decided to switch gears and pursue coding as a
+              career.
+            </p>
+          </div>
+          <div></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="skills">
+      <h2 class="heading">Skills</h2>
+      <div class="container">
+        <div class="letter">
+          <h2>HTML</h2>
+        </div>
+        <div class="letter">
+          <h2>CSS</h2>
+        </div>
+        <div class="letter">
+          <h2>Javascript</h2>
+        </div>
+        <div class="letter">
+          <h2>React</h2>
+        </div>
+        <div class="letter">
+          <h2>node.js</h2>
+        </div>
+        <div class="letter">
+          <h2>express.js</h2>
+        </div>
+        <div class="letter">
+          <h2>Structured Data</h2>
+        </div>
+        <div class="letter">
+          <h2>Google</h2>
+        </div>
+        <div class="letter">
+          <h2>Adobe</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="projects">
+      <h2 class="heading">Projects</h2>
+      <div class="container">
+        <div id="dcg">
+          <div class="projectTitle">
+            <h3>Dream Car Generator</h3>
+          </div>
+          <div class="exampleImg">
+            <img src="/images/dcgImg.png" alt="image of DCG web app" />
+          </div>
+          <div class="btnDiv">
+          <button class="mainButton">
+            <a href="https://dreamcargenerator.herokuapp.com/"></a>View Web App
+          </button>
+          <button class="mainButton">
+            <a href="https://youtu.be/IUwmtEA08Eo"></a>View Demo
+          </button>
+          </div>
+        </div>
+
+        <div id="folio">
+          <div class="projectTitle">
+            <h3>Portfolio</h3>
+          </div>
+          <div class="exampleImg">
+            <img src="./images/portImg.png"/>
+          </div>
+          <div class="btnDiv">
+          <button class="mainButton">
+            <a href="https://mitchellhcrane.github.io/"></a>View Portfolio
+          </button>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <h2 class="heading">Contact</h2>
+      <div class="container">
+        <!-- <h2>Resources</h2> -->
+      </div>
+    </footer>
+
+    <script src="index.js"></script>
   </body>
 </html>
