--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   </head>
   <body>
     <section class="intro">
-<div class="container">
+      <div class="container">
   <nav>
-    <!-- <img src="./images/#e0e1ddMClogo.png"> -->
+    <div class="links">
+      <a href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing">Resume</a>
+      <a href="https://www.linkedin.com/in/mitch-crane/">LinkedIn</a>
+      <a href="https://github.com/MitchellHCrane">GitHub</a>
+    </div>
   </nav>
   <h2 class="heroH2">Hi, I'm Mitchell & I'm a Web Developer</h2>
-</div>
+      </div>
     </section>
 
     <section class="aboutMeContainer">
@@ -26,14 +30,13 @@
             <img src="./images/headshot.jpg" />
             <p>
               I am a Web Developer seeking a full-time web development position.
-              I graduated with a bachelors degree in digital marketing from Utah
-              Valley University. Shortly after, I enrolled in Devmountain's Web
-              Development Bootcamp.
+              I graduated with a Bachelor's degree in Digital Marketing at Utah
+              Valley University. Shortly after, I enrolled in the Web Development Bootcam at Devmountain.
             </p>
             <br />
             <p>
               I was first introduced to coding by a couple of classes that were
-              required for my digital marketing degree. I was intrigued with how
+              required for my Digital Marketing degree. I was intrigued with how
               one could create and build through code. I have always been a
               hands-on type of person. I love tinkering on vehicles and tuning
               up my bikes and dirtbikes. You could classify my as a DIY type of
@@ -123,9 +126,16 @@
     </section>
 
     <footer class="footer">
-      <h2 class="heading">Contact</h2>
+      <h2 class="heading">Resources</h2>
+      <div class="footerH2cont">
+      </div>
       <div class="container">
-        <!-- <h2>Resources</h2> -->
+        <div class="links">
+          <a href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing">Resume</a>
+          <a href="https://www.linkedin.com/in/mitch-crane/">LinkedIn</a>
+          <a href="https://github.com/MitchellHCrane">GitHub</a>
+          <a href="mailto:mitchellhcrane@gmail.com">Email</a>
+        </div>
       </div>
     </footer>
 
