added target blank to links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
           <div class="links">
             <a
               href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
+              target="_blank"
               >Resume</a
             >
-            <a href="https://www.linkedin.com/in/mitch-crane/">LinkedIn</a>
-            <a href="https://github.com/MitchellHCrane">GitHub</a>
+            <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
+              >LinkedIn</a
+            >
+            <a href="https://github.com/MitchellHCrane" target="_blank"
+              >GitHub</a
+            >
           </div>
         </nav>
         <h2 class="heroH2">Hi, I'm Mitchell & I'm a Web Developer</h2>
@@ -139,8 +144,10 @@
             href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
             >Resume</a
           >
-          <a href="https://www.linkedin.com/in/mitch-crane/">LinkedIn</a>
-          <a href="https://github.com/MitchellHCrane">GitHub</a>
+          <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
+            >LinkedIn</a
+          >
+          <a href="https://github.com/MitchellHCrane" target="_blank">GitHub</a>
           <a href="mailto:mitchellhcrane@gmail.com">Email</a>
         </div>
       </div>
