--- a/index.html
+++ b/index.html
@@ -65,34 +65,34 @@
     </section>
 
     <section class="skills">
-      <h2 class="heading">Skills</h2>
+      <h2 class="heading">Stack</h2>
       <div class="container">
-        <div class="letter">
-          <h2>HTML</h2>
-        </div>
-        <div class="letter">
-          <h2>CSS</h2>
-        </div>
-        <div class="letter">
-          <h2>Javascript</h2>
-        </div>
-        <div class="letter">
-          <h2>React</h2>
-        </div>
-        <div class="letter">
-          <h2>node.js</h2>
-        </div>
-        <div class="letter">
-          <h2>express.js</h2>
-        </div>
-        <div class="letter">
-          <h2>Structured Data</h2>
-        </div>
-        <div class="letter">
-          <h2>Google</h2>
-        </div>
-        <div class="letter">
-          <h2>Adobe</h2>
+        <div class="grid">
+          <div>
+            <img src="./images/html.png" alt="html 5 Icon" />
+            <p>HTML 5</p>
+          </div>
+          <div>
+            <img src="./images/css.png" alt="css Icon" />
+            <p>CSS</p>
+            >
+          </div>
+          <div>
+            <img src="./images/javascript.png" alt="Javascript Icon" />
+            <p>Javascript</p>
+          </div>
+          <div>
+            <img src="./images/react.png" alt="React icon" />
+            <p>React</p>
+          </div>
+          <div><img src="./images/node-js.png" alt="Node.js icon" /><p>Node</p></div>
+          <div>
+            <img src="./images/express.png" alt="Express Icon" />
+            <p>Express</p>
+          </div>
+          <!-- <div><img src="" alt="" /></div>
+          <div><img src="" alt="" /></div>
+          <div><img src="" alt="" /></div> -->
         </div>
       </div>
     </section>
