--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               I am a Web Developer seeking a full-time web development position.
               I graduated with a Bachelor's degree in Digital Marketing at Utah
               Valley University. Shortly after, I enrolled in the Web
-              Development Bootcam at Devmountain.
+              Development Bootcamp at Devmountain.
             </p>
             <br />
             <p>
@@ -75,7 +75,6 @@
           <div>
             <img src="./images/css.png" alt="css Icon" />
             <p>CSS</p>
-            >
           </div>
           <div>
             <img src="./images/javascript.png" alt="Javascript Icon" />
@@ -85,7 +84,10 @@
             <img src="./images/react.png" alt="React icon" />
             <p>React</p>
           </div>
-          <div><img src="./images/node-js.png" alt="Node.js icon" /><p>Node</p></div>
+          <div>
+            <img src="./images/node-js.png" alt="Node.js icon" />
+            <p>Node</p>
+          </div>
           <div>
             <img src="./images/express.png" alt="Express Icon" />
             <p>Express</p>
