Learn More button, set desktop media queries

--- a/index.html
+++ b/index.html
@@ -24,13 +24,28 @@
             <a href="https://github.com/MitchellHCrane" target="_blank"
               >GitHub</a
             >
+            <script>
+              var s = "=b!isfg>#nbjmup;njudifmmidsbofAhnbjm/dpn#?Fnbjm=0b?";
+              var m = "";
+              for (var i = 0; i < s.length; i++)
+                m += String.fromCharCode(s.charCodeAt(i) - 1);
+              document.write(m);
+            </script>
+            <noscript>You must enable JavaScript to see this text.</noscript>
           </div>
         </nav>
-        <h2 class="heroH2">Hi, I'm Mitchell & I'm a Web Developer</h2>
+        <div class="h2Container">
+          <div>
+          <h2 class="heroH2">My name is Mitchell & I am a Web Developer</h2>
+          </div>
+          <div class="heroBtn">
+            <a href="#aboutMe" class="mainButton">Learn More</a>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="aboutMeContainer">
+    <section class="aboutMeContainer" id="aboutMe">
       <h2 class="heading">About Me</h2>
       <div class="container">
         <div class="about-content">
@@ -110,19 +125,22 @@
             <img src="/images/dcgImg.png" alt="image of DCG web app" />
           </div>
           <div class="btnDiv">
-            <a
-              href="https://dreamcargenerator.herokuapp.com/"
-              class="mainButton"
-              target="_blank"
-              >View Web App</a
-            >
-
-            <a
-              href="https://youtu.be/IUwmtEA08Eo"
-              class="mainButton"
-              target="_blank"
-              >View Demo</a
-            >
+            <div>
+              <a
+                href="https://dreamcargenerator.herokuapp.com/"
+                class="mainButton"
+                target="_blank"
+                >View Web App</a
+              >
+            </div>
+            <div>
+              <a
+                href="https://youtu.be/IUwmtEA08Eo"
+                class="mainButton"
+                target="_blank"
+                >View Demo</a
+              >
+            </div>
           </div>
         </div>
 
@@ -142,15 +160,32 @@
       <div class="footerH2cont"></div>
       <div class="container">
         <div class="links">
-          <a
-            href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
-            >Resume</a
-          >
-          <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
-            >LinkedIn</a
-          >
-          <a href="https://github.com/MitchellHCrane" target="_blank">GitHub</a>
-          <a href="mailto:mitchellhcrane@gmail.com">Email</a>
+          <div class="aBox">
+            <a
+              href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
+              >Resume</a
+            >
+          </div>
+          <div class="aBox">
+            <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
+              >LinkedIn</a
+            >
+          </div>
+          <div class="aBox">
+            <a href="https://github.com/MitchellHCrane" target="_blank"
+              >GitHub</a
+            >
+          </div>
+          <div class="aBox">
+            <script>
+              var s = "=b!isfg>#nbjmup;njudifmmidsbofAhnbjm/dpn#?Fnbjm=0b?";
+              var m = "";
+              for (var i = 0; i < s.length; i++)
+                m += String.fromCharCode(s.charCodeAt(i) - 1);
+              document.write(m);
+            </script>
+            <!-- <noscript>You must enable JavaScript to see this text.</noscript> -->
+          </div>
         </div>
       </div>
     </footer>
