--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <div id="folio">
           <div class="projectTitle">
-            <h3>Portfolio</h3>
+            <h3>Portfolio Website</h3>
           </div>
           <div class="exampleImg">
             <img src="./images/portImg.png" />
