--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
     <section class="intro">
       <div class="container">
         <nav>
-          <div class="links">
-            <a
-              href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
-              target="_blank"
-              >Resume</a
-            >
-            <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
-              >LinkedIn</a
-            >
-            <a href="https://github.com/MitchellHCrane" target="_blank"
-              >GitHub</a
-            >
-            <script>
-              var s = "=b!isfg>#nbjmup;njudifmmidsbofAhnbjm/dpn#?Fnbjm=0b?";
-              var m = "";
-              for (var i = 0; i < s.length; i++)
-                m += String.fromCharCode(s.charCodeAt(i) - 1);
-              document.write(m);
-            </script>
-            <noscript>You must enable JavaScript to see this text.</noscript>
+          <div class="logoLinksDiv">
+            <div class="mCraneLogo">
+              <img src="./images/webLogo@2x.png" alt="M Crane web web logo" />
+            </div>
+            <div class="links">
+              <a
+                href="https://docs.google.com/document/d/1CQQhmxLYSzfyE7lM85KI_5qswO2WCYop611Nj5dMns4/edit?usp=sharing"
+                target="_blank"
+                >Resume</a
+              >
+              <a href="https://www.linkedin.com/in/mitch-crane/" target="_blank"
+                >LinkedIn</a
+              >
+              <a href="https://github.com/MitchellHCrane" target="_blank"
+                >GitHub</a
+              >
+              <script>
+                var s = "=b!isfg>#nbjmup;njudifmmidsbofAhnbjm/dpn#?Fnbjm=0b?";
+                var m = "";
+                for (var i = 0; i < s.length; i++)
+                  m += String.fromCharCode(s.charCodeAt(i) - 1);
+                document.write(m);
+              </script>
+              <noscript>You must enable JavaScript to see this text.</noscript>
+            </div>
           </div>
         </nav>
         <div class="h2Container">
