--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
       <div class="container">
         <div id="dcg">
           <div class="projectTitle">
+            <h3>Maintenance Tracker</h3>
+          </div>
+          <div class="exampleImg">
+            <img src="/images/maintenanceTrackerApp.png" alt="image of DCG web app" />
+          </div>
+          <div class="btnDiv">
+            <div>
+              <!-- <a
+                href="https://dreamcargenerator.herokuapp.com/"
+                class="mainButton"
+                target="_blank"
+                >View Web App</a
+              >
+            </div> -->
+            <div>
+              <a
+                href="https://www.youtube.com/watch?v=87zMKQMzGwg"
+                class="mainButton"
+                target="_blank"
+                >View Demo</a
+              >
+            </div>
+          </div>
+        </div>
+        <div id="dcg">
+          <div class="projectTitle">
             <h3>Dream Car Generator</h3>
           </div>
           <div class="exampleImg">
