--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <section class="skills">
-      <h2 class="heading">Stack</h2>
+      <h2 class="heading">Technologies</h2>
       <div class="container">
         <div class="grid">
           <div>
@@ -98,7 +98,11 @@
           </div>
           <div>
             <img src="./images/javascript.png" alt="Javascript Icon" />
-            <p>Javascript</p>
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <img src="./images/typescript.png" alt="TypeScript Icon" />
+            <p>TypeScript</p>
           </div>
           <div>
             <img src="./images/react.png" alt="React icon" />
@@ -111,6 +115,26 @@
           <div>
             <img src="./images/express.png" alt="Express Icon" />
             <p>Express</p>
+          </div>
+          <div>
+            <img src="./images/git.png" alt="Git icon" />
+            <p>Git</p>
+          </div>
+          <div>
+            <img src="./images/github.png" alt="GitHub icon" />
+            <p>GitHub</p>
+          </div>
+          <div>
+            <img src="./images/postgresql.png" alt="PostgreSQL icon" />
+            <p>PostgreSQL</p>
+          </div>
+          <div>
+            <img src="./images/figma.png" alt="Figma icon" />
+            <p>Figma</p>
+          </div>
+          <div>
+            <img src="./images/heroku.png" alt="Heroku icon" />
+            <p>Heroku</p>
           </div>
           <!-- <div><img src="" alt="" /></div>
           <div><img src="" alt="" /></div>
