--- a/index.html
+++ b/index.html
@@ -148,6 +148,25 @@
       <div class="container">
         <div id="dcg">
           <div class="projectTitle">
+            <h3>start.troywarner.com</h3>
+          </div>
+          <div class="exampleImg">
+            <img src="/images/troySite.png" alt="image of start.troywarner.com" />
+          </div>
+          <div class="btnDiv">
+          
+            <div>
+              <a
+                href="http://start.troywarner.com/"
+                class="mainButton"
+                target="_blank"
+                >View Page</a
+              >
+            </div>
+          
+        </div>
+        <div id="dcg">
+          <div class="projectTitle">
             <h3>Maintenance Tracker</h3>
           </div>
           <div class="exampleImg">
