--- a/index.html
+++ b/index.html
@@ -55,36 +55,32 @@
       <div class="container">
         <div class="about-content">
           <div class="about-text-container">
-            <img src="./images/headshot.jpg" />
-            <p>
-              I am a Web Developer seeking a full-time web development position.
-              I graduated with a Bachelor's degree in Digital Marketing at Utah
-              Valley University. Shortly after, I enrolled in the Web
-              Development Bootcamp at Devmountain.
-            </p>
-            <br />
-            <p>
-              I was first introduced to coding by a couple of classes that were
-              required for my Digital Marketing degree. I was intrigued with how
-              one could create and build through code. I have always been a
-              hands-on type of person. I love tinkering on vehicles and tuning
-              up my bikes and dirtbikes. You could classify my as a DIY type of
-              person. Coding naturally became another outlet for me to build and
-              tinker.
-            </p>
-            <br />
-            <p>
-              Not long after graduating and completeing a few marketing
-              internships, I decided to switch gears and pursue coding as a
-              career.
-            </p>
+            <div>
+              <img class="profileImg" src="./images/MitchProfile.jpg" />
+            </div>
+            <div class="aboutMeP">
+              <p>
+              Hello! I'm Mitch,
+              I recently earned my Bachelor's degree in Digital Marketing at UVU. During this time, I contributed as an intern to a variety of companies doing SEO, PPC, & other digital marketing & web practices. 
+              </p>
+              <br />
+              <p>
+              I recently decided to pursue an education in web development & software engineering. I graduated September 24th from Devmountains web development bootcamp.
+              </p>
+              <br />
+              <p>
+              I am currently doing freelance work for a mortgage lending company. In addition to my freelance work & personal projects, I am earning certificates in a variety of technologies through Codecademy.
+              </p>
+            </div>
           </div>
-          <div></div>
+        </div>
+        <div class="heroBtn" id="techBtn">
+          <a href="#technologies" class="mainButton">Technologies</a>
         </div>
       </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="technologies">
       <h2 class="heading">Technologies</h2>
       <div class="container">
         <div class="grid">
@@ -137,13 +133,16 @@
             <p>Heroku</p>
           </div>
           <!-- <div><img src="" alt="" /></div>
-          <div><img src="" alt="" /></div>
-          <div><img src="" alt="" /></div> -->
-        </div>
+            <div><img src="" alt="" /></div>
+            <div><img src="" alt="" /></div> -->
+          </div>
+          <div class="heroBtn" id="projectsBtn">
+            <a href="#projects" class="mainButton">Projects</a>
+          </div>
       </div>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="projects">
       <h2 class="heading">Projects</h2>
       <div class="container">
         <div id="dcg">
