--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h3>illuminex.trade</h3>
           </div>
           <div class="exampleImg">
-            <img src="/images/myqudoz.png" alt="image of illuminex.trade website" />
+            <img src="/images/illu-trade.png" alt="image of illuminex.trade website" />
           </div>
           <div class="btnDiv">
           
