--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="about-content">
           <div class="about-text-container">
             <div class="imageDiv">
-              <img class="profileImg" src="./images/profilePicFeb22.png" />
+              <img class="profileImg" src="./images/fam.JPG" />
             </div>  
             <div class="aboutMeP">
               <p>
